--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Typicode</string>
+    <string name="down_facing_chevron">Down-facing chevron</string>
 </resources>
